Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,7 @@ pool:
 
 stages:
 - stage: Builders
-  displayName: ShiftLeft CORE
+  displayName: CodeQl CLI
   jobs:
   - job: Build
     displayName: Scan .Net and .Net core apps
