Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,15 +23,52 @@ stages:
     #     command: 'restore'
     #     projects: '$(Build.SourcesDirectory)'
 
+    # - task: Bash@3
+    #   displayName: 'Download CodeQL CLI Bundle'
+    #   inputs:
+    #     targetType: 'inline'
+    #     script: |
+    #       echo "Downloading CodeQL CLI from: $CODEQL_BUNDLE_URL"
+    #       mkdir -p codeql
+    #       curl -L $CODEQL_BUNDLE_URL -o codeql-bundle.tar.gz
+    #       tar -xvzf codeql-bundle.tar.gz -C .
+    #       ./codeql/codeql resolve languages
+    #       echo "########################################Codeql database create######################################"
+    #       ./codeql/codeql database create
+
     - task: Bash@3
-      displayName: 'Download CodeQL CLI Bundle'
       inputs:
         targetType: 'inline'
         script: |
-          echo "Downloading CodeQL CLI from: $CODEQL_BUNDLE_URL"
-          mkdir -p codeql
-          curl -L $CODEQL_BUNDLE_URL -o codeql-bundle.tar.gz
-          tar -xvzf codeql-bundle.tar.gz -C .
-          ./codeql/codeql resolve languages
-          echo "########################################Codeql database create######################################"
-          ./codeql/codeql database create
+          #!/bin/bash
+          
+          set -e  # Exit on error
+          
+          # Step 1: Define variables
+          CODEQL_BUNDLE_URL="https://github.com/github/codeql-action/releases/latest/download/codeql-bundle.tar.gz"
+          CODEQL_DIR="$(pwd)/codeql"
+          DATABASE_DIR="$(pwd)/codeql-database"
+          SOURCE_DIR="$(pwd)/src"  # Change this if your code is elsewhere
+          LANGUAGE="javascript"    # Change to your source language (e.g., cpp, java, csharp)
+          
+          # Step 2: Download CodeQL bundle
+          echo "Downloading CodeQL CLI bundle..."
+          mkdir -p "$CODEQL_DIR"
+          curl -L "$CODEQL_BUNDLE_URL" -o codeql-bundle.tar.gz
+          
+          # Step 3: Extract the bundle
+          echo "Extracting CodeQL CLI to $CODEQL_DIR..."
+          tar -xzf codeql-bundle.tar.gz -C "$CODEQL_DIR"
+          
+          # Step 4: Add to PATH
+          export PATH="$CODEQL_DIR/codeql:$PATH"
+          
+          # Step 5: Verify CLI with resolve languages
+          echo "Available CodeQL languages:"
+          codeql resolve languages
+          
+          # Step 6: Create CodeQL database
+          echo "Creating CodeQL database at $DATABASE_DIR for language: $LANGUAGE..."
+          codeql database create "$DATABASE_DIR" --language="$LANGUAGE" --source-root="$SOURCE_DIR"
+          
+          echo "✅ CodeQL database created successfully!"
