Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -62,7 +62,6 @@ stages:
           
           # Step 4: Add to PATH
           export PATH="$CODEQL_DIR/codeql:$PATH"
-          export PATH="$CODEQL_DIR/codeql:$PATH"
           
           # Step 5: Verify CLI with resolve languages
           echo "Available CodeQL languages:"
@@ -76,3 +75,5 @@ stages:
           echo "✅ CodeQL Analyzed  successfully!"
           ls -a
           codeql github upload-results --repository=vulnerable_net_core --ref=refs/heads/main --commit=88ef9b4f2871d58b2c74656bbbb87d8e604a6eb2 --sarif=codeql-csharp-results.sarif
+      env:
+        GITHUB_TOKEN: $(GITHUB_TOKEN)
