--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -57,4 +57,15 @@ stages:
           codeql github upload-results --repository="HarisEnmark/vulnerable_net_core" --ref="refs/heads/main" --commit="$(Build.SourceVersion)" --sarif=codeql-csharp-results.sarif
       env:
         GITHUB_TOKEN: $(GITHUB_TOKEN)
-        
+
+    - task: CopyFiles@2
+      inputs:
+        SourceFolder: '.'
+        Contents: '**.sarif'
+        TargetFolder: '$(Build.ArtifactStagingDirectory)/CodeAnalysisLogs'
+
+    - task: PublishBuildArtifacts@1
+      inputs:
+        PathtoPublish: '$(Build.ArtifactStagingDirectory)/CodeAnalysisLogs'
+        ArtifactName: 'CodeAnalysisLogs'
+        publishLocation: 'Container'
